# langchain-siliconflow

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: chat.ipynb  document_loaders.ipynb  llms.ipynb  provider.ipynb  retrievers.ipynb  stores.ipynb  text_embedding.ipynb  toolkits.ipynb  tools.ipynb  vectorstores.ipynb
langchain_siliconflow/: __init__.py  chat_models.py  document_loaders.py  embeddings.py  retrievers.py  toolkits.py  tools.py  utils.py  vectorstores.py
tests/integration_tests/: test_base.py  test_chat_models.py  test_embeddings.py  test_retrievers.py  test_tools.py  test_vectorstores.py
tests/unit_tests/: test_base.py  test_chat_models.py  test_embeddings.py  test_tools.py
