[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "langchain-siliconflow"
version = "0.2.3"
description = "An integration package connecting SiliconFlow and LangChain"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = []
urls = { "Source Code" = "https://github.com/siliconflow/langchain-siliconflow", "Release Notes" = "https://github.com/siliconflow/langchain-siliconflow/releases" }

[tool.poetry]
name = "langchain-siliconflow"
version = "0.2.3"
description = "An integration package connecting SiliconFlow and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/siliconflow/langchain-siliconflow"
license = "MIT"

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/siliconflow/langchain-siliconflow"
"Release Notes" = "https://github.com/siliconflow/langchain-siliconflow/releases"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = "^1.1.3"
openai = "^2.9.0"
langchain-openai = "^1.1.1"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests that run on a schedule rather than in every test run",
    "flaky: mark tests that may fail intermittently",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
"pytest<9.0.0",
"pytest-asyncio~=1.3.0",
"pytest-socket~=0.7.0",
"pytest-watcher~=0.4.3",
"langchain-tests~=1.0.2",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "<9.0.0"
pytest-asyncio = "^1.3.0"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.4.3"
langchain-tests = "^1.0.2"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.4.1"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.8"

[tool.poetry.group.typing.dependencies]
mypy = "^1.19.0"
