[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-siliconflow"
version = "0.2.3"
description = "An integration package connecting SiliconFlow and LangChain"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = []
urls = { "Source Code" = "https://github.com/siliconflow/langchain-siliconflow", "Release Notes" = "https://github.com/siliconflow/langchain-siliconflow/releases" }
dependencies = [
    "langchain-core>=1.1.3,<2.0.0",
    "langchain-openai>=1.1.1,<2.0.0",
    "openai>=2.9.0,<3.0.0",
]

# Configures uv behavior
[tool.uv]
default-groups = ["dev", "test", "lint", "typing", "codespell"]

[dependency-groups]
dev = [
    "langchain-tests>=1.0.2,<2.0.0",
    "pytest<9.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-socket>=0.7.0,<0.8.0",
    "pytest-watcher>=0.4.3,<0.5.0",
]
test = [
    "langchain-tests>=1.0.2,<2.0.0",
    "pytest<9.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-socket>=0.7.0,<0.8.0",
    "pytest-watcher>=0.4.3,<0.5.0",
]
lint = [
    "ruff>=0.14.8,<1.0.0",
]
typing = [
    "mypy>=1.19.0,<2.0.0",
]
codespell = [
    "codespell>=2.4.1,<3.0.0",
]

# --- Tool Configurations (Unchanged) ---

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests that run on a schedule rather than in every test run",
    "flaky: mark tests that may fail intermittently",
]
asyncio_mode = "auto"
